2002-12-02  Glynn Foster  <glynn.foster@sun.com>

	* gnome-character-map.desktop.in: Update for StartupNotify

2002-11-18  Fernando Herrera <fherrera@onirica.com>

	* gnome-character-map.desktop.in: add X-GNOME-BUGZILLA stuff

2002-11-07  Emmanuel Vecchia <emmanuel.vecchia@sun.com>

	* src/callbacks.c: (set_status_bar): Fix up the messages
	sent to the status bar for the character codes. Fixes 
	#94751.

2002-10-15  Glynn Foster  <glynn.foster@sun.com>

	* src/callbacks.c, src/interface.c: Dup the initial font
	string - fixes #95757.

2002-09-17  Muktha <muktha.narayan@wipro.com>
	
	* src/interface.c, src/callbacks.h, src/callbacks.c: update 
	  the statusbar when character buttons are navigated with the 
	  keyboard. Fixes #93475

2002-09-11  Irene Ryan <irene.ryan@sun.com>

	* help/C/gnome-character-map.xml: updated to reflect changes
	  to the UI.
	* help/C/gnome-character-map-C.omf: updated to reflect new
	  release date and version number of manual.
	* help/C/figures/gnome-character-map.png: reflects updated UI
	    
2002-09-06  Glynn Foster  <glynn.foster@sun.com>

	* src/interface.c: Set the mnemonic label for the font selector
	widget. Fixes #92675.

Fri Aug 30 13:20:12 2002  HideToshi Tajima  <hidetoshi.tajima@sun.com>

	* src/asciiselect.c
	(spin_button_hex_input_func): add
	(spin_button_hex_output_func): add
	(cb_ascii_select_spin_changed): modify
	(ascii_select_init): modify
	use hex input and output (like "0x41" for "A") in "Select
	character" dialog, and change maximum input value to 0xff to 0xffff
	
2002-08-22  Glynn Foster  <glynn.foster@sun.com>

	* src/interface.c: s/GNOME Character Map/Character Map as per
	HIG. Fixes #91440.

2002-08-16  Federic Zhang <federic.zhang@sun.com>

	* src/callbacks.c, src/interface.c, src/interface.h: 
	Preserve the font across pages.

2002-08-15  Federic Zhang <federic.zhang@sun.com>

	* src/callbacks.c: Insert at cursor. Fixes #90821 in part.

2002-08-15  Hongli Lai	<h.lai@chello.nl>
