@@ -9,16 +9,16 @@
     </maintainer>
 <!--
     <title>
-      Character Map Manual V2.3
+      Character Map Manual V2.4
     </title>
 -->
     <title>
       Character Map
     </title>    
     <date>
-      2002-09-10
+      2003-01-23
     </date>
-    <version identifier="2.3" date="2002-09-10" description="Updated for GNOME 2.0, program version 2.0.0"/>
+    <version identifier="2.4" date="2003-01-23" description="Updated for GNOME 2.2, program version 2.0.2"/>
     <subject category="GNOME|Applications|Accessories"/>
     <description>
       User manual for the GNOME Character Map application. 
