@@ -1,11 +1,11 @@
 <?xml version="1.0"?>
 <!DOCTYPE article PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN" 
- "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
-  <!ENTITY appversion "2.0.0">
-  <!ENTITY manrevision "2.3">
+ "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [ 
+  <!ENTITY appversion "2.0.2">
+  <!ENTITY manrevision "2.4">
   <!ENTITY app "Character Map">
   <!ENTITY legal SYSTEM "legal.xml">
-  <!ENTITY date "September 2002">
+  <!ENTITY date "January 2003">
 ]>
 <!-- (Do not remove this comment block.)
   Maintained by the GNOME Documentation Project
@@ -20,7 +20,7 @@ change lang to appropriate code -->
   <articleinfo>
 	 <title>&app; Manual V&manrevision;</title>
 	 <copyright>
-		<year>2002</year>
+		<year>2003</year>
 		<holder>Sun Microsystems</holder>
 	 </copyright>
 	 <copyright>
@@ -67,6 +67,17 @@ change lang to appropriate code -->
 		<revision>
 		  <revnumber>&app; Manual V&manrevision;</revnumber>
 		  <date>&date;</date>
+		  <revdescription>
+			 <para role="author">
+			       Sun GNOME Documentation Team 
+			       <email>gdocteam@sun.com</email></para>
+			 <para role="publisher">
+			       GNOME Documentation Project</para>
+		  </revdescription>
+		</revision>
+		<revision>
+		  <revnumber>GNOME Character Map Manual V2.3</revnumber>
+		  <date>September 2002</date>
 		  <revdescription>
 			 <para role="author">
 			       Sun GNOME Documentation Team 
