@@ -1,3 +1,9 @@
+2003-01-24  Glynn Foster  <glynn.foster@sun.com>
+
+	* help/C/gnome-character-map-C.omf:
+	* help/C/gnome-character-map.xml: New 2.2 docs from the Sun
+	team.
+
 2002-12-02  Glynn Foster  <glynn.foster@sun.com>
 
 	* gnome-character-map.desktop.in: Update for StartupNotify
